# bundlemanager_bundle_framework

./: 0303.diff  AGENTS.md  BUILD.gn  CLAUDE.md  CODEOWNERS  OAT.xml  README_zh.md  appexecfwk.gni  bundle.json  bundle_hisysevent.yaml  hisysevent.yaml  p.patch
bundle_tool/: BUILD.gn  bundle.json  bundletool.gni
bundle_tool/frameworks/: BUILD.gn
bundle_tool/frameworks/include/: bundle_command.h  bundle_command_common.h  bundle_test_tool.h  quick_fix_command.h  quick_fix_status_callback_host_impl.h  shell_command.h  status_receiver_impl.h
bundle_tool/frameworks/src/: bundle_command.cpp  bundle_command_common.cpp  bundle_test_tool.cpp  main.cpp  main_test_tool.cpp  quick_fix_command.cpp  quick_fix_status_callback_host_impl.cpp  shell_command.cpp  status_receiver_impl.cpp
bundle_tool/test/mock/: mock_bundle_installer_host.cpp  mock_bundle_installer_host.h  mock_bundle_mgr_host.cpp  mock_bundle_mgr_host.h
distributed_bundle_framework/: BUILD.gn  bundle.json  dbms.gni
distributed_bundle_framework/interfaces/inner_api/: BUILD.gn
distributed_bundle_framework/services/dbms/: BUILD.gn
interfaces/inner_api/appexecfwk_base/: BUILD.gn  appexecfwk_base.map
interfaces/inner_api/appexecfwk_core/: BUILD.gn  IBundleMgrExt.idl  IOverlayManager.idl  appexecfwk_core.map
interfaces/inner_api/bundlemgr_extension/: BUILD.gn
interfaces/inner_api/bundlemgr_graphics/: BUILD.gn
interfaces/kits/ani/: BUILD.gn
interfaces/kits/cj/: BUILD.gn
interfaces/kits/js/: BUILD.gn
interfaces/kits/zip/: BUILD.gn
service_router_framework/services/srms/: BUILD.gn
services/bundlemgr/: BUILD.gn  appexecfwk_bundlemgr.gni  installs.cfg  installs_npapi.cfg  libbms.map
services/bundlemgr/etc/: BUILD.gn  bms.para  bms.para.dac
services/bundlemgr/include/: ability_manager_helper.h  account_helper.h  app_privilege_capability.h  base_bundle_installer.h  base_extractor.h  bms_device_manager.h  bms_key_event_mgr.h  bms_param.h  bundle_cache_mgr.h  bundle_common_event_mgr.h  bundle_data_mgr.h  bundle_data_storage_database.h  bundle_data_storage_interface.h  bundle_data_storage_rdb.h  bundle_event_callback_death_recipient.h  bundle_exception_handler.h  bundle_extractor.h  bundle_framework_services_ipc_interface_code.h  bundle_install_checker.h  bundle_installer.h  bundle_installer_host.h  bundle_installer_manager.h  bundle_mgr_host_impl.h  bundle_mgr_service.h  bundle_mgr_service_event_handler.h  bundle_multiuser_installer.h  bundle_parser.h  bundle_permission_mgr.h  bundle_permissions.h  bundle_profile.h  bundle_promise.h  bundle_resource_change_type.h  bundle_resource_helper.h  bundle_service_constants.h  bundle_state_storage.h  bundle_stream_installer_host_impl.h  bundle_user_mgr_host_impl.h  bundle_util.h  bundle_verify_mgr.h  code_sign_helper.h  (+49 more)
services/bundlemgr/spm_module_parser/: BUILD.gn
services/bundlemgr/src/: ability_manager_helper.cpp  account_helper.cpp  base_bundle_installer.cpp  base_extractor.cpp  bms_device_manager.cpp  bms_key_event_mgr.cpp  bms_param.cpp  bundle_cache_mgr.cpp  bundle_common_event_mgr.cpp  bundle_data_mgr.cpp  bundle_data_storage.cpp  bundle_data_storage_database.cpp  bundle_data_storage_rdb.cpp  bundle_event_callback_death_recipient.cpp  bundle_exception_handler.cpp  bundle_extractor.cpp  bundle_install_checker.cpp  bundle_installer.cpp  bundle_installer_host.cpp  bundle_installer_manager.cpp  bundle_mgr_host_impl.cpp  bundle_mgr_service.cpp  bundle_mgr_service_event_handler.cpp  bundle_multiuser_installer.cpp  bundle_parser.cpp  bundle_permission_mgr.cpp  bundle_permissions.cpp  bundle_profile.cpp  bundle_resource_helper.cpp  bundle_scanner.cpp  bundle_state_storage.cpp  bundle_status_callback_death_recipient.cpp  bundle_stream_installer_host_impl.cpp  bundle_user_mgr_host_impl.cpp  bundle_util.cpp  bundle_verify_mgr.cpp  code_sign_helper.cpp  common_profile.cpp  data_clone_install_helper.cpp  default_permission_profile.cpp  (+40 more)
services/bundlemgr/test/: BUILD.gn
test/benchmarktest/bundlemgr_proxy_test/: BUILD.gn  bundlemgr_proxy_test.cpp
test/fuzztest/: BUILD.gn  bms_fuzztest_util.h
test/fuzztest/abilityinfofromjson_fuzzer/: BUILD.gn
test/fuzztest/abilityinfomarshalling_fuzzer/: BUILD.gn
test/fuzztest/abilityinfounmarshalling_fuzzer/: BUILD.gn
test/fuzztest/addappInstallcontrolrule_fuzzer/: BUILD.gn  addappInstallcontrolrule_fuzzer.cpp
test/fuzztest/addapprunningcontrolrule_fuzzer/: BUILD.gn  addapprunningcontrolrule_fuzzer.cpp  addapprunningcontrolrule_fuzzer.h
test/fuzztest/appcontrolhost_fuzzer/: BUILD.gn  appcontrolhost_fuzzer.cpp
test/fuzztest/applicationinfo_fuzzer/: BUILD.gn  applicationinfo_fuzzer.cpp
test/fuzztest/applicationinfofromjson_fuzzer/: BUILD.gn
test/fuzztest/apprunningcontrolrule_fuzzer/: BUILD.gn  apprunningcontrolrule_fuzzer.cpp
test/fuzztest/apprunningcontrolruleresult_fuzzer/: BUILD.gn  apprunningcontrolruleresult_fuzzer.cpp
test/fuzztest/bundlefileutil_fuzzer/: BUILD.gn  bundlefileutil_fuzzer.cpp  bundlefileutil_fuzzer.h
test/fuzztest/bundleinfo_fuzzer/: BUILD.gn  bundleinfo_fuzzer.cpp
test/fuzztest/bundleinfofromjson_fuzzer/: BUILD.gn
test/fuzztest/bundleinstalldhost_fuzzer/: BUILD.gn  bundleinstalldhost_fuzzer.cpp
test/fuzztest/bundleinstallerhost_fuzzer/: BUILD.gn  bundleinstallerhost_fuzzer.cpp
test/fuzztest/bundleinstallerproxy_fuzzer/: BUILD.gn  bundleinstallerproxy_fuzzer.h
test/fuzztest/bundlemgrhost_fuzzer/: BUILD.gn  bundlemgrhost_fuzzer.cpp  bundlemgrhost_fuzzer.h
test/fuzztest/bundlemgrproxy_fuzzer/: BUILD.gn  bundlemgrproxy_fuzzer.cpp  bundlemgrproxy_fuzzer.h
test/fuzztest/bundlepackinfo_fuzzer/: BUILD.gn  bundlepackinfo_fuzzer.cpp  bundlepackinfo_fuzzer.h
test/fuzztest/bundlestatuscallbackproxy_fuzzer/: BUILD.gn  bundlestatuscallbackproxy_fuzzer.h
test/fuzztest/bundlestreaminstallerhost_fuzzer/: BUILD.gn  bundlestreaminstallerhost_fuzzer.cpp  bundlestreaminstallerhost_fuzzer.h
test/fuzztest/bundlestreaminstallerproxy_fuzzer/: BUILD.gn  bundlestreaminstallerproxy_fuzzer.cpp
test/fuzztest/bundlesyscap_fuzzer/: BUILD.gn
test/fuzztest/bundleuserinfo_fuzzer/: BUILD.gn  (+1 more)
(+4681 files in other folders)
