# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

bundle_framework_path = "//foundation/bundlemanager/bundle_framework"

common_path = "${bundle_framework_path}/common"
kits_path = "${bundle_framework_path}/interfaces/kits"
inner_api_path = "${bundle_framework_path}/interfaces/inner_api"

bundletool_path = "${bundle_framework_path}/bundle_tool/frameworks"
bundletool_test_path = "${bundle_framework_path}/bundle_tool/test"

declare_args() {
  account_enable_bm = true
  overlay_install_bm = true
  quick_fix_bm = true
  distributed_bundle_framework_bm = true

  if (defined(global_parts_info) &&
      !defined(global_parts_info.account_os_account)) {
    account_enable_bm = false
  }

  if (defined(global_parts_info) &&
      !defined(global_parts_info.bundlemanager_distributed_bundle_framework)) {
    distributed_bundle_framework_bm = false
  }
}

print("account_enable_bm = " + "$account_enable_bm")
print("overlay_install_bm = " + "$overlay_install_bm")
print("quick_fix_bm = " + "$quick_fix_bm")
print("distributed_bundle_framework_bm = " + "$distributed_bundle_framework_bm")
